# neuralNet

./: .gitignore  .travis.yml  CMakeLists.txt
scripts/: plotLoss.py  split.py
src/: CMakeLists.txt  gradientDescend.cpp  inputSet.cpp  inputSet.h  labeledExample.cpp  labeledExample.h  model.cpp  model.h  neuralNet.cpp
src/activation/: CMakeLists.txt  activation.cpp  activation.h  linear.cpp  linear.h  relu.cpp  relu.h
src/cost/: CMakeLists.txt  cost.cpp  cost.h
src/input/: CMakeLists.txt  dense.cpp  dense.h  input.cpp  input.h  parallelSparse.cpp  parallelSparse.h  sparse.cpp  sparse.h
src/layer/: CMakeLists.txt  denseLayer.cpp  denseLayer.h  layer.cpp  layer.h  parallelDenseLayer.cpp  parallelDenseLayer.h
src/model/: CMakeLists.txt  model.cpp  model.h  stats.cpp  stats.h
src/trainAlgorithms/: CMakeLists.txt  gradientDescend.cpp  gradientDescend.h  parallelGradientDescend.cpp  parallelGradientDescend.h  pedoneCheck.cpp  pedoneCheck.h
src/trainSet/: CMakeLists.txt  diskInputSet.cpp  diskInputSet.h  diskInputSet2.cpp  diskInputSet2.h  inputSet.h  labeledExample.cpp  memoryInputSet.cpp  memoryInputSet.h
src/utils/: CMakeLists.txt  chessUtils.cpp  chessUtils.h  variance.cpp  variance.h
tests/: CMakeLists.txt  dense-test.cpp  linear-test.cpp  main.cpp  relu-test.cpp
tests/activation/: CMakeLists.txt  activation-test.cpp  linear-test.cpp  relu-test.cpp
tests/cost/: CMakeLists.txt  cost-test.cpp
tests/input/: CMakeLists.txt  dense-test.cpp  parallelSparse-test.cpp  sparse-test.cpp
tests/layer/: CMakeLists.txt  denseLayerTest.cpp  parallelDenseLayerTest.cpp
tests/model/: CMakeLists.txt  modelTest.cpp
